--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,6 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "use_env_variable": "DATABASE_URL"
   },
   "test": {
     "username": "root",
