--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Tokky-tane/SyskenLibrary#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
