--- a/server/config/config.json
+++ b/server/config/config.json
@@ -3,12 +3,7 @@
     "use_env_variable": "DATABASE_URL"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "use_env_variable": "TEST_DATABASE_URL"
   },
   "production": {
     "username": "root",
