--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "sequelize db:seed:undo:all",
+    "test": "jest",
+    "posttest": "sequelize db:seed:undo:all"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,8 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   }
 }
