--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -14,5 +14,8 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
-    "rules": {}
+    "rules": {
+        "space-infix-ops": "error",
+        "arrow-spacing": "warn"
+    }
 }
