--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.3.1",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
+    "redoc": "^2.0.0-rc.23",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
   },
