--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "pretest": "sequelize db:seed:undo:all",
-    "test": "jest",
+    "test": "jest --runInBand",
     "posttest": "sequelize db:seed:undo:all"
   },
   "repository": {
