--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Tokky-tane/SyskenLibrary#readme",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "express-validator": "^6.3.1",
