--- a/server/reference/syskenlibrary.v0.1.yaml
+++ b/server/reference/syskenlibrary.v0.1.yaml
@@ -59,6 +59,13 @@ paths:
       security:
         - bearerAuth: []
       parameters: []
+    delete:
+      summary: delete all books
+      operationId: delete-books
+      responses:
+        '204':
+          description: No Content
+      description: すべての書籍データを削除する
   /users:
     get:
       summary: get all users
